--- a/rooms2.html
+++ b/rooms2.html
@@ -124,12 +124,12 @@
             <div class="tm-container-outer" id="tm-section-2">
                 <section class="tm-slideshow-section">
                     <div class="tm-slideshow">
-                        <img src="img_t/tm-img-01.jpg" alt="Image">
-                        <img src="img_t/tm-img-02.jpg" alt="Image">
-                        <img src="img_t/tm-img-03.jpg" alt="Image">
+                        <img src="./assets/webp/DELUXE_2_CAMAS.webp" alt="Image">
+                        <img src="./assets/webp/DELUXE_2_CAMAS_2.webp" alt="Image">
+                        <img src="./assets/webp/DELUXE_2_CAMAS_3.webp" alt="Image">
                     </div>
                     <div class="tm-slideshow-description tm-bg-primary">
-                        <h2 class="">Europe's most visited places</h2>
+                        <h2 class="">Nombre Habitación</h2>
                         <p>Aenean in lacus nec dolor fermentum congue. Maecenas ut velit pharetra, pharetra tortor sit amet, vulputate sem. Vestibulum mi nibh, faucibus ac eros id, sagittis tincidunt velit. Proin interdum ullamcorper faucibus. Ut mi nunc, sollicitudin non pulvinar id, sagittis eget diam.</p>
                         <a href="#" class="text-uppercase tm-btn tm-btn-white tm-btn-white-primary">Continue Reading</a>
                     </div>
@@ -137,13 +137,13 @@
                 <section class="clearfix tm-slideshow-section tm-slideshow-section-reverse">
 
                     <div class="tm-right tm-slideshow tm-slideshow-highlight">
-                        <img src="img_t/tm-img-02.jpg" alt="Image">
-                        <img src="img_t/tm-img-03.jpg" alt="Image">
-                        <img src="img_t/tm-img-01.jpg" alt="Image">
+                        <img src="./assets/webp/DELUXE_2_CAMAS.webp" alt="Image">
+                        <img src="./assets/webp/DELUXE_2_CAMAS_2.webp" alt="Image">
+                        <img src="./assets/webp/DELUXE_2_CAMAS_3.webp" alt="Image">
                     </div>
 
                     <div class="tm-slideshow-description tm-slideshow-description-left tm-bg-highlight">
-                        <h2 class="">Asia's most popular places</h2>
+                        <h2 class="">Nombre Habitación</h2>
                         <p>Vivamus in massa ullamcorper nunc auctor accumsan ac at arcu. Donec sagittis mattis pharetra. Proin commodo, ante et volutpat pulvinar, arcu arcu ullamcorper diam, id maximus sem tellus id sem. Suspendisse eget rhoncus diam. Fusce urna elit, porta nec ullamcorper id.</p>
                         <a href="#" class="text-uppercase tm-btn tm-btn-white tm-btn-white-highlight">Continue Reading</a>
                     </div>
@@ -151,12 +151,39 @@
                 </section>
                 <section class="tm-slideshow-section">
                     <div class="tm-slideshow">
-                        <img src="img_t/tm-img-03.jpg" alt="Image">
-                        <img src="img_t/tm-img-02.jpg" alt="Image">
-                        <img src="img_t/tm-img-01.jpg" alt="Image">
+                        <img src="./assets/webp/DELUXE_2_CAMAS.webp" alt="Image">
+                        <img src="./assets/webp/DELUXE_2_CAMAS_2.webp" alt="Image">
+                        <img src="./assets/webp/DELUXE_2_CAMAS_3.webp" alt="Image">
                     </div>
                     <div class="tm-slideshow-description tm-bg-primary">
-                        <h2 class="">America's most famous places</h2>
+                        <h2 class="">Nombre Habitación</h2>
+                        <p>Donec nec laoreet diam, at vehicula ante. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse nec dapibus nunc, quis viverra metus. Morbi eget diam gravida, euismod magna vel, tempor urna.</p>
+                        <a href="#" class="text-uppercase tm-btn tm-btn-white tm-btn-white-primary">Continue Reading</a>
+                    </div>
+                </section>
+                <section class="clearfix tm-slideshow-section tm-slideshow-section-reverse">
+
+                    <div class="tm-right tm-slideshow tm-slideshow-highlight">
+                        <img src="./assets/webp/DELUXE_2_CAMAS.webp" alt="Image">
+                        <img src="./assets/webp/DELUXE_2_CAMAS_2.webp" alt="Image">
+                        <img src="./assets/webp/DELUXE_2_CAMAS_3.webp" alt="Image">
+                    </div>
+
+                    <div class="tm-slideshow-description tm-slideshow-description-left tm-bg-highlight">
+                        <h2 class="">Nombre Habitación</h2>
+                        <p>Vivamus in massa ullamcorper nunc auctor accumsan ac at arcu. Donec sagittis mattis pharetra. Proin commodo, ante et volutpat pulvinar, arcu arcu ullamcorper diam, id maximus sem tellus id sem. Suspendisse eget rhoncus diam. Fusce urna elit, porta nec ullamcorper id.</p>
+                        <a href="#" class="text-uppercase tm-btn tm-btn-white tm-btn-white-highlight">Continue Reading</a>
+                    </div>
+
+                </section>
+                <section class="tm-slideshow-section">
+                    <div class="tm-slideshow">
+                        <img src="./assets/webp/DELUXE_2_CAMAS.webp" alt="Image">
+                        <img src="./assets/webp/DELUXE_2_CAMAS_2.webp" alt="Image">
+                        <img src="./assets/webp/DELUXE_2_CAMAS_3.webp" alt="Image">
+                    </div>
+                    <div class="tm-slideshow-description tm-bg-primary">
+                        <h2 class="">Nombre Habitación</h2>
                         <p>Donec nec laoreet diam, at vehicula ante. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse nec dapibus nunc, quis viverra metus. Morbi eget diam gravida, euismod magna vel, tempor urna.</p>
                         <a href="#" class="text-uppercase tm-btn tm-btn-white tm-btn-white-primary">Continue Reading</a>
                     </div>
