--- a/cdmx.html
+++ b/cdmx.html
@@ -48,6 +48,172 @@
     <!-------------------------------------------->
 </head>
 <body>
+<!------ modals ------->
+<div class="modal fade" id="aboutUs" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header" style="background-color: var(--color-primario);">
+                <h5 class="modal-title fontWhite cursiveFont" id="">Hotel Punto MX - Acerca de Nosotros</h5>
+                <!--<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>-->
+            </div>
+            <div class="modal-body fontHover">
+                <small>
+                    Nos encontramos en el Centro Histórico, uno de los sitios más representativos de la CDMX, déjate consentir en PUNTO MX con una tendencia ART DECO que encierra modernidad y confort que te hará vivir la mejor experiencia hospitalaria.
+                    <br>
+                    Contamos con 60 lujosas y cómodas habitaciones; cada una de ellas con un toque especial.<br>
+                    Ya sea que tu viaje sea familiar, de amigos o negocios, PUNTO MX es un lugar maravilloso para hacer de tu experiencia en México algo único.
+                </small>
+                <ul class="banner_well">
+                    <li style="color: #0c5460!important;"><i class="fa-solid fa-drumstick-bite fontHover" style="color: #0c5460!important;"></i><small>Desayuno Buffete</small></li>
+                    <li style="color: #0c5460!important;"><i class="fa-solid fa-bed fontHover" style="color: #0c5460!important;"></i><small>Upgrade gratis</small></li>
+                    <li style="color: #0c5460!important;"><i class="fa-solid fa-hand-holding-dollar fontHover" style="color: #0c5460!important;"></i><small>Mejor precio</small></li>
+                </ul>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary btn-lg" data-dismiss="modal" style="padding: 5px 15px!important; border-radius: 20px;">Cerrar</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="sucursalH" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header" style="background-color: var(--color-primario);">
+                <h5 class="modal-title fontWhite cursiveFont">Hotel Punto MX - Ubicación de la Sucursal</h5>
+                <!--<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>-->
+            </div>
+            <div class="modal-body fontHover text-center">
+                <small>
+                    Visítanos, no te arrepentirás.<br>
+                    ¡Reserva con la tarifa más baja! <br>+52 (55) 5512 - 7064<br>
+                    <i class="fa-solid fa-location-dot"></i> Uruguay 47 Col. Centro C.P. 06020 CDMX, MEX.
+                </small>
+                <div id="map1" class="fh5co-map" style="height: 600px; display: flex; justify-content: center; align-items: center; padding:0 20px;">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3762.579176855236!2d-99.13985438406046!3d19.430580286885526!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1ff515d840f61%3A0x80e2a464c3755aa!2sHotel%20Punto%20Mx!5e0!3m2!1ses!2smx!4v1653328105577!5m2!1ses!2smx" width="700" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary btn-lg" data-dismiss="modal" style="padding: 5px 15px!important; border-radius: 20px;">Cerrar</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="bolsaTrabajo" tabindex="-1" role="dialog" aria-labelledby="bolsaTrabajo_Modal" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header" style="background-color: var(--color-primario);">
+                <h5 class="modal-title fontWhite cursiveFont">Hotel Punto MX - Bolsa de Trabajo</h5>
+                <!--<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>-->
+            </div>
+            <div class="modal-body fontHover">
+                <div class="container-fluid">
+                    <div class="row text-center" style="margin-bottom: 15px!important;">
+                        <small>
+                            En <span class="fontHover">Punto MX</span> constantemente buscamos personas que quieran ser parte de nuestro equipo, por lo que en esta sección, podrás encontrar las últimas vacantes disponibles para laborar con nosotros.
+                        </small>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h5 class="fontHover cursiveFont" style="margin-bottom: 0; padding-bottom: 0;">Vacantes Disponibles</h5>
+                            <ul class="list-unstyled" style="font-size: 1.5rem;">
+                                <li>Auxiliar de Cocina</li>
+                                <li>Cocinero</li>
+                                <li>Lavaloza</li>
+                                <li>Garrotero</li>
+                                <li>Bell Boy (Bilingüe)</li>
+                                <li>Camarista</li>
+                            </ul>
+                        </div>
+                        <div class="col-md-6">
+                            <form class="" id="contactForm" style="min-width:100px;">
+                                <ul class="list-unstyled">
+                                    <li style="font-size: 1.5rem; color: #0c5460">
+                                        <h5 class="cursiveFont fontHover" style="margin-bottom: 0;padding-bottom: 0;">Envía tus datos</h5>
+                                    </li>
+                                    <li style="font-size: 1.5rem; color: #0c5460">
+                                        <input type="text" name="name" class="borde_r" placeholder="Nombre" id="from_name" required style="height: 25px; min-width: 30px!important;"/>
+                                    </li>
+                                    <li style="font-size: 1.5rem; color: #0c5460">
+                                        <input type="email" name="email" placeholder="email@example.com" id="from_email" required style="height: 25px; min-width: 30px!important;" />
+                                        <span class="form_hint">Formato "email@domino.com"</span>
+                                    </li>
+                                    <li style="font-size: 1.5rem; color: #0c5460">
+                                        <textarea name="message" cols="40" rows="6" required id="from_message" style="height: 80px; width: 200px;">Puesto requerido: </textarea>
+                                    </li>
+                                    <li style="font-size: 1.5rem; color: #0c5460">
+                                        <input class="btn btn-primary btn-luxe-primary" type="button" value="Enviar" onclick="enviarEmail()" style="height: 40px; width: 90px; box-shadow: none; margin: auto;"/>
+                                    </li>
+                                </ul>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary btn-lg" data-dismiss="modal" style="padding: 5px 15px!important; border-radius: 20px;">Cerrar</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="avisoPrivacidad" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header" style="background-color: var(--color-primario);">
+                <h5 class="modal-title fontWhite cursiveFont">Hotel Punto MX - Aviso de Privacidad</h5>
+            </div>
+            <div class="modal-body fontHover">
+                <small>
+                    Estimado Cliente, A.T. RENTA S.A. de C.V.  (En adelante “Hotel  Punto MX”), cuyas oficinas se encuentran ubicadas en República de Uruguay No.47 Col. Centro, C.P. 06020 CDMX, México; respetamos su privacidad y por lo tanto nos comprometemos a proteger y mantener de manera confidencial, la información obtenida de su persona.<br>
+                    Nos referimos a toda la información de personas físicas relacionadas con su Empresa y/o Persona (en adelante “Datos Personales”), que por cualquier causa se encuentre en posesión de Hotel Punto MX.<br>
+                    Respecto a lo anterior, hacemos de su conocimiento que la información que Hotel Punto MX necesita, y que proviene en su mayoría de su Empresa y/o Persona, está orientada a la prestación del servicio(s) objeto de Hotel Punto MX, así como para brindarle una mejor atención y poder estar en cumplimiento de las leyes y políticas que rigen las funciones y actividades del hotel.<br>
+                    En virtud de lo anterior, Hotel Punto MX podrá llegar a compartir los Datos Personales con las demás entidades subsidiarias, afiliadas y/o relacionadas al mismo, proveedores de servicio que Hotel Punto MX haya contratado y/o terceros que a juicio sea necesario para la realización de las actividades del negocio.<br>
+                    Las partes mencionadas en el párrafo anterior, únicamente recibirán los Datos Personales que se requieran para la realización de sus actividades y sólo podrán utilizar los Datos Personales para ofrecer servicios a nombre de Hotel Punto MX y para cumplir con cualquier requisito legal aplicable.<br>
+                    Adicionalmente a los casos antes referidos, Hotel Punto MX podrá revelar los Datos Personales:<br>
+                    <ol style="list-style: upper-roman;  font-size: 1.5rem!important;">
+                        <li>si alguna ley o proceso legal lo exigen,</li>
+                        <li>ante las autoridades competentes o autoridades gubernamentales, previa solicitud de las mismas y/o</li>
+                        <li>cuando consideremos que la revelación de los mismos es necesaria o apropiada para evitar daños físicos o pérdidas económicas.</li>
+                    </ol>
+                    Tanto por las prácticas de privacidad de Hotel Punto MX, como por lo establecido en las leyes vigentes aplicables, las bases de datos del hotel, están debidamente protegidas y resguardadas para evitar pérdidas, usos incorrectos o accesos no autorizados, publicaciones, modificaciones o destrucciones de los Datos Personales que nos han sido proporcionados; velando en todo momento la protección de Datos Personales, evitando daño, pérdida, alteración, destrucción, uso, acceso o tratamiento.<br>
+                    Su Empresa debe hacerse responsable de hacerle llegar el presente Aviso, a las personas físicas relacionadas con la misma.<br>
+                    Hotel Punto MX asume que:
+                    <ul style="font-size: 1.5rem!important;">
+                        <li>Su Empresa cumple con las obligaciones establecidas en la Ley Federal de Protección de Datos Personales en Posesión de los Particulares mediante políticas internas;</li>
+                        <li>Que los Datos Personales proporcionados por su Empresa Yo Persona son pertinentes, claros, correctos y actualizados para los fines para los cuales fueron recabados y;</li>
+                        <li>Que su Empresa se encuentra facultada para proporcionar a Hotel Punto MX</li>
+                    </ul>
+                    Las personas físicas relacionadas a su Empresa podrán en cualquier momento:<br>
+                    Acceder a los Datos Personales que obren en poder de Hotel Punto MX<br>
+                    <ul  style="font-size: 1.5rem!important;">
+                        <li>Rectificarlos cuando sean inexactos o incompletos, inadecuados excesivos, siempre y cuando no resulte imposible o exija esfuerzos desproporcionados.</li>
+                        <li>Oponerse al tratamiento de los Datos Personales por causa legítima, y</li>
+                        <li>Cancelarlos, salvo cuando pudiese causar perjuicios a derechos o intereses legítimos de terceros o en los casos previstos por la legislación aplicable.</li>
+                    </ul>
+                    Las personas físicas relacionadas con su Empresa podrán ejercer los derechos mencionados en el párrafo anterior, mediante una petición directa a Hotel Punto MX a través del correo electrónico web@hotelespuntomx.com<br>
+                    Las personas físicas de su Empresa, deberán proveer la siguiente información para ingresar la solicitud correspondiente:<br>
+                    <ol  style="font-size: 1.5rem!important;">
+                        <li>Nombre, domicilio y cualquier otro medio para contactarlo.</li>
+                        <li>Los documentos que acrediten su identidad o la del representante legal.</li>
+                        <li>Descripción de los Datos Personales respecto de los cuales desea ejercer algún derecho.</li>
+                        <li>En caso de las solicitudes de rectificación, se deberá señalar que información de los Datos Personales desea corregir, modificar y/o actualizar.</li>
+                    </ol>
+                    En caso de que no desee consentir la transmisión de los Datos Personales, o en caso de dudas respecto al tratamiento de los Datos Personales, le agradeceremos que se ponga en contacto al correo electrónico web@hotelespuntomx.com de Hotel Punto MX, ubicado en República de Uruguay No.47 Col. Centro, C.P. 06020 CDMX, México
+                </small>
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary btn-lg" data-dismiss="modal" style="padding: 5px 15px!important; border-radius: 20px;">Cerrar</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!------------>
 <div id="fh5co-wrapper">
     <div id="fh5co-page">
         <div id="fh5co-header">
@@ -289,25 +455,23 @@
                 </div>
             </div>
         </div>
-
         <footer id="footer" class="fh5co-bg-color">
             <div class="container">
                 <div class="row">
                     <div class="col-md-3">
                         <div class="copyright">
-                            <p style="color: var(--grey-sv);"><small>&copy; Hotel Punto MX<br> Todos los derechos reservados. </small> <br>
+                            <p><small>&copy; Hotel Punto MX 2022<br> Todos los derechos reservados. </small> <br>
                             </p>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="row">
                             <div class="col-md-6">
-                                <h3>Compañía</h3>
                                 <ul class="link">
-                                    <li><a href="#">Acerca de Nosotros</a></li>
-                                    <li><a href="#">Sucursal</a></li>
-                                    <li><a href="#">Bolsa de Trabajo</a></li>
-                                    <li><a href="#">Aviso de Privacidad</a></li>
+                                    <li><a href="#" data-toggle="modal" data-target="#aboutUs">Acerca de Nosotros</a></li>
+                                    <li><a href="#" data-toggle="modal" data-target="#sucursalH">Sucursal</a></li>
+                                    <li><a href="#" data-toggle="modal" data-target="#bolsaTrabajo">Bolsa de Trabajo</a></li>
+                                    <li><a href="#" data-toggle="modal" data-target="#avisoPrivacidad">Aviso de Privacidad</a></li>
                                 </ul>
                             </div>
                             <div class="col-md-6">
@@ -315,22 +479,10 @@
                                 <ul class="link">
                                     <li><a href="restaurant.html">Resturant MX</a></li>
                                     <li><a href="cafe.html">Café MX</a></li>
-                                    <li><a href="services.html">Estacionamiento</a></li>
-                                    <li><a href="services.html">Pet Friendly</a></li>
-                                    <!--<li><a href="#">5item</a></li>
-                                    <li><a href="#">6item</a></li>-->
+                                    <li><a href="index.html#parking-tab">Estacionamiento</a></li>
+                                    <li><a href="index.html#pet-tab">Pet Friendly</a></li>
                                 </ul>
                             </div>
-                            <!--<div class="col-md-6">
-                                <h3>Subscribe</h3>
-                                <p>Sed cursus ut nibh in semper. Mauris varius et magna in fermentum. </p>
-                                <form action="#" id="form-subscribe">
-                                    <div class="form-field">
-                                        <input type="email" placeholder="Email Address" id="email">
-                                        <input type="submit" id="submit" value="Send">
-                                    </div>
-                                </form>
-                            </div>-->
                         </div>
                     </div>
                     <div class="col-md-3">
